<resources>
    <string name="app_name">DeepArt</string>
    <string name="action_settings">设置</string>
    <string name="string_app_name">DeepArt</string>
    <string name="string_describ">一种新的探索人工智能的方式</string>
    <string name="string_likely">相似比率</string>
    <string name="string_autosave">保存至本地</string>
    <string name="string_start">生成DeepArt</string>
    <string name="string_about">关于</string>
    <string name="string_github">Github</string>
    <string name="string_save">保存</string>
    <string name="string_normal">常规</string>
    <string name="string_more">更多</string>
    <string name="string_advanced">高级</string>
    <string name="string_cnn">使用卷积神经网络</string>
    <string name="string_vgg">使用VGG预训练模型</string>
    <string name="string_gpu">使用GPU加速</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="string_summary_cnn">使用CNN可以加快神经网络的学习</string>
    <string name="string_summary_vgg">使用VGG预训练参数大大加快生成时间</string>
    <string name="string_summary_gpu">GPU运算速度比CPU快很多，但是服务器一般没有GPU</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_author">作者: 金天 在读研究生</string>
    <string name="string_me">金天</string>
    <string name="string_email">nicholasjela@gmail.com</string>
    <string name="string_blog">lewisjin.coding.me</string>
</resources>
