<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ouman.deepart.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/string_describ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp" />

    <ImageView
        android:layout_width="150dp"
        app:srcCompat="@drawable/pic_2"
        android:id="@+id/imageViewArt"
        android:layout_height="200dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="58dp"
        android:scaleType="centerCrop" />

    <TextView
        android:text="@string/string_likely"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekbar_rate"
        android:layout_toStartOf="@+id/seekbar_rate"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/seekbar_rate"
        android:layout_toLeftOf="@+id/seekbar_rate" />

    <TextView
        android:text="@string/string_autosave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="17dp"
        android:id="@+id/textView4"
        android:layout_toLeftOf="@+id/seekbar_rate"
        android:layout_toStartOf="@+id/seekbar_rate" />

    <CheckBox
        android:text="@string/string_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/seekbar_rate"
        android:layout_alignStart="@+id/seekbar_rate" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="250dp"
        app:srcCompat="@drawable/pic_1"
        android:id="@+id/imageViewNormal"
        android:layout_above="@+id/seekbar_rate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/imageViewArt"
        android:scaleType="centerCrop" />

    <SeekBar
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/seekbar_rate"
        android:layout_below="@+id/imageViewArt"
        android:layout_toRightOf="@+id/imageViewNormal"
        android:layout_toEndOf="@+id/imageViewNormal"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_width="130dp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekbar_rate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/tv_rate"
        android:layout_toRightOf="@+id/seekbar_rate"
        android:layout_toEndOf="@+id/seekbar_rate"
        android:layout_alignTop="@+id/seekbar_rate" />

    <Button
        android:text="@string/string_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_generate"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/checkBox"
        android:layout_alignEnd="@+id/checkBox" />

</RelativeLayout>
